@@ -27,12 +27,6 @@
     handler=".handlers.execute_event"
     />
 
-  <!-- Custom context -->
-  <class class="eea.converter.async.ContextWrapper">
-    <implements interface="plone.contentrules.engine.interfaces.IRuleAssignable" />
-  </class>
-
-
   <!-- Content rules substitutions -->
   <adapter
     for="eea.converter.interfaces.IContextWrapper"
